# HitE

./: .gitignore  CMakeLists.txt  README.md  a.out  flake.nix  test_sizeof.c  valgrind.supp
prefabs/: camera.scm  citadel.scm  developer_camera.scm  player.scm  terrain.scm  test_cube.scm  test_sphere.scm  torus.scm
shaders/: lighting.comp  lighting.glsl  raymarch.comp  raymarch_core.glsl
shaders/common/: physics_constants.glsl  scene_constants.glsl
shaders/shapes/: box.glsl  citadel.glsl  plane.glsl  registry.glsl  shape_common.glsl  sphere.glsl  terrain.glsl  torus.glsl  town.glsl
shapes/: README.md  box.c  capsule.c  cone.c  cylinder.c  plane.c  shape_interface.h  sphere.c  torus.c
src/: main.c
src/components/: camera_component.c  camera_component.h  camera_movement_component.c  camera_movement_component.h  camera_rotation_component.c  camera_rotation_component.h  component_parser_registry.c  component_parser_registry.h  component_registry.c  component_registry.def  component_registry.h  developer_overlay_component.c  developer_overlay_component.h  gui_component.c  gui_component.h  lighting_component.c  lighting_component.h  physics_component.c  physics_component.h  player_collider_component.c  player_collider_component.h  player_component.c  player_component.h  player_movement_component.c  player_movement_component.h  player_movement_controls_component.c  player_movement_controls_component.h  shape_component.c  shape_component.h  transform_component.c  transform_component.h
src/core/: component_parsers.c  component_parsers.h  ecs.c  ecs.h  events.c  events.h  global.c  global.h  input_handler.c  input_handler.h  logger.c  logger.h  physics_constants.h  prefab.c  prefab.h  resources.c  resources.h  scheme_parser.c  scheme_parser.h  types.h  world.c  world.h  world_loader.c  world_loader.h
src/renderer/: raymarcher.c  raymarcher.h  render_system.c  render_system.h  swapchain.c  swapchain.h  vulkan_core.c  vulkan_core.h
worlds/: example.scm
